# vcpkg-boilerplate

./: CMakeLists.txt
.github/workflows/: build-windows.yml
source/: main.cpp
